[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lecrv"
version = "0.1.0"
description = "Forward-Secure Threshold Lamport Signatures via Lazy-Expanded Puncturable Seeds"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Nishant" },
]
keywords = [
    "cryptography",
    "post-quantum",
    "threshold-signatures",
    "hash-based-signatures",
    "lamport",
    "merkle-tree",
    "forward-security",
    "puncturable-prf",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "pycryptodome>=3.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "matplotlib>=3.8",
]

[project.urls]
Homepage = "https://github.com/CodeX-98/le-crv"
Repository = "https://github.com/CodeX-98/le-crv"
Issues = "https://github.com/CodeX-98/le-crv/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lecrv = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"